<resources>
    <string name="app_name">Hair Recommended System</string>
    <string name="title_activity_photo_editor">PhotoEditorActivity</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_dialog_title">Upload Image</string>
    <string name="upload_picker_title">Select Picture</string>
    <string name="directory_create_fail">Failed to create directory</string>
    <string name="access_media_permissions_msg">To attach photos, we need to access media on your device</string>
    <string name="continue_txt">Continue</string>
    <string name="not_now">NOT NOW</string>
    <string name="media_access_denied_msg">You denied storage access, no photos will be added.</string>

    <string name="ic_close">"\ue918"</string>
    <string name="ic_text">"\ue945"</string>
    <string name="ic_draw">""\ue944</string>
    <string name="ic_images">"\ue949"</string>
    <string name="ic_save">"\ue946"</string>
    <string name="ic_clear_all">"\ue947"</string>
    <string name="ic_continue">"\ue948"</string>
    <string name="ic_delete">"\ue92c"</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_from_camera">Choose From Camera</string>
    <string name="undo">Undo</string>
    <string name="erase">Erase</string>


    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_address">Enter Address</string>
    <string name="register">Register</string>
    <string name="select_date_of_birth">Select date of birth</string>

    <string-array name="gender">
        <item>Select gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="tap_here_to_crop_image">Tap here to crop image</string>
    <string name="crop">Crop</string>
    <string name="registration">Registration</string>
    <string name="select_image">Select image</string>

    <string name="enter_number">Enter number</string>

    <string name="cancel">Cancel</string>

</resources>
