<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectImageActivity">


    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:src="@drawable/icon" app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="70dp"
               android:contentDescription="@string/select_image"
               android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnGallery"
            android:text="@string/gallery"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnCamera"
            app:layout_constraintTop_toBottomOf="@id/btnGallery" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/camera"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>


</android.support.constraint.ConstraintLayout>